<resources>
    <!--activity login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="title_activity_login">Sign in</string>

    <!--bottom menu -->
    <string name="item_home">Home</string>
    <string name="item_account">Account</string>
    <string name="item_create">Create</string>
    <string name="item_library">Library</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="devotion_deleted">Devotion Deleted</string>

    <!--activity register -->
    <string name="repeat_password">Repeat Password</string>
    <string name="prompt_username">User Name</string>

    <string name="search_hint">Poem Title</string>

    <string name="app_name">Winnie</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="update">UPDATE</string>

    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>

    <string name="aim">Thoughts worth Sharing</string>
    <string name="logo_content_desc">Logo</string>


    <string name="reader">Reader</string>
    <string name="writer">Writer</string>


    <string name="post">POST</string>
    <string name="delete">delete</string>

    <string name="next">Next</string>
    <string name="photo">Photo</string>
    <string name="add_post">Add Post</string>
    <string name="liked">%1$s liked %2$s</string>
    <string name="post_category">%1$s  *  </string>
    <string name="post_status">%1$s  *  </string>
    <string name="post_chapters">%1$s</string>
    <string name="post_author">%1$s</string>
    <string name="article_author">By %1$s</string>
    <string name="viewers">%1$s views</string>
    <string name="tap_to_write">Tap to start writing</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="edit_devotion">Edit Devotion</string>
    <string name="like_button">Like button</string>
    <string name="initial_count">0</string>
    <string name="comment_icon">Comment icon</string>
    <string name="view_icon">View icon</string>
    <string name="just_now">just now</string>
    <string name="episode">Episode:</string>
    <string name="document_image">Document image</string>
    <string name="prologue">Prologue</string>
    <string name="story_title">Story Title</string>
    <string name="background_image">background image</string>
    <string name="profile_picture">profile picture</string>
    <string name="set_photo">Set Photo</string>
    <string name="my_block">My Block</string>
    <string name="_poems">Poems</string>
    <string name="chevron">chevron</string>
    <string name="devotions">Devotions</string>
    <string name="posted">Posted</string>
    <string name="tvstories">Stories</string>
    <string name="complete">Complete</string>
    <string name="ongoing">Ongoing</string>
    <string name="edit_chapters">Edit Chapters</string>
    <string name="stories">Stories</string>
    <string name="type_comment">Type comment &#230;</string>
    <string name="send_icon">send icon</string>
    <string name="book_image">book image</string>
    <string name="updated">Updated</string>
    <string name="settings">settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>

    <string-array name="pref_upload_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>


    <string name="pref_title_vibrate">Vibrate</string>
    <string name="select_chapter">Select chapter</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="action_settings">Settings</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="winnie">Winnie</string>
    <string name="readers">Readers</string>
    <string name="view_stories">View Stories</string>

</resources>
